<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activites.SignupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        >

    </de.hdodenhof.circleimageview.CircleImageView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintBottom_toBottomOf="parent"

        >


        <TextView
            android:id="@+id/tv_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/create_new_acc"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        </TextView>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/tv_create_acc"

            >

        </EditText>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_username"

            >

        </EditText>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_email"

            >

        </EditText>
        <EditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/repeat_pass"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_pass"

            >

        </EditText>
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:text="@string/number"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_pass"

            >

        </EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/create"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/et_number"

            >

        </androidx.appcompat.widget.AppCompatButton>





        <TextView
            android:id="@+id/tv_signup_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/signup_with"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn_create"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>