<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activites.PreLoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/main_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_phone"
            android:textColor="@color/white"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toTopOf="parent"

            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_email"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_phone"

            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_email"

            >

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_fb"

            >

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>