<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AgreementFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/main_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"

            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/tv_accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/accept_terms"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >

            </TextView>

            <TextView
                android:id="@+id/tv_i_have_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/i_have_read_and_accept"

                app:layout_constraintTop_toBottomOf="@id/tv_accept_terms"
                app:layout_constraintLeft_toLeftOf="parent"
                >

            </TextView>



                <RadioButton
                    android:id="@+id/term_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:textSize="13sp"
                    android:backgroundTint="@color/white"
                    android:text="@string/terms"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_i_have_read"
                    >

                </RadioButton>
                <RadioButton
                    android:id="@+id/privacy_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:textSize="13sp"
                    android:backgroundTint="@color/white"
                    android:text="@string/privacy"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_radio"
                    >

                </RadioButton>


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_i_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/i_agree"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/layout_tems"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_reject"

            >

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/layout_tems"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_i_agree"

            >

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>