<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/main_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"

        >
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/et_pass"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:textColorHint="@color/white"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toTopOf="parent"

            >

        </EditText>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:nextFocusDown="@id/btn_login"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_email"

            >

        </EditText>

        <ImageView
            android:id="@+id/iv_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/ic_baseline_visibility_24"
            app:layout_constraintRight_toRightOf="@id/et_pass"
            app:layout_constraintTop_toTopOf="@id/et_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_pass"
            app:tint="@color/white">

        </ImageView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/et_pass"

            >

        </androidx.appcompat.widget.AppCompatButton>



        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="parent"
            >

        </TextView>

        <TextView
            android:id="@+id/tv_dont_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"

            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        </TextView>
<!--        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:text="@string/signup_here"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_acc"
            app:layout_constraintLeft_toRightOf="@id/tv_dont_have_acc"
            >

        </TextView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>